
gochi_sou_sama = "Thank you for the wonderful meal";
dishes = "Dishes";
inFridgeFoods = "In Fridge Foods";
cartedFoods = "Carted Foods";
errandFoods = "Errand Foods";
addNewMarketItem = "Add new Market Item";
editCustomItem = "Delete custom market item";
select = "Select";
no_dishes = "No Dishes";
no_foods = "No Foods";
msg_add_dishes = "Let's cook & add dish";
...
