...
            <point key="canvasLocation" x="1689" y="1039"/>
        </scene>
        <!--Freezed-->
        <scene sceneID="MF7-Gs-KX8">
            <objects>
                <navigationController storyboardIdentifier="UINavigationController-wPh-3O-OWl" id="wPh-3O-OWl" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Freezed" image="freezer" id="3aD-0S-k9r"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dJY-zp-utX">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="DiL-80-eQe" kind="relationship" relationship="rootViewController" id="mNo-M5-qRo"/>
...
