...
mayonnaise = "Mayonnaise";
olive_oil = "Olive Oil";
solt = "Solt";
soy_source = "Soy Source";
vinegar = "Vinegar";
worcester_sauce = "Worcester Sauce";
asparagus = "Asparagus";
bean_sprouts = "Bean Sprouts";
bitter_gourd = "Bitter Gourd";
bok_choy = "Bok Choy";
broccoli = "Broccoli";
burdock_root = "Burdock Root";
cabbage = "Cabbage";
...
