...
class InFridgeListViewController: MealDockListViewController {

    override func viewDidLoad() {
        super.viewDidLoad()

        self.title = "inFridgeFoods".localized
        activateFab(fab: fab, target: self, image: UIImage(named: "dish")!, tap: #selector(onFabTapped), longTap: #selector(onFabLongPressed))
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        
        FirebaseService.shared.observeInFridgeHarvest { (items) in
...
